# TMS_Z81_homeworks

./: .gitignore  .pylintrc  CODEOWNERS  README.md  pyproject.toml  requirements.txt  setup.cfg
lesson_1/: task_1.py  task_2.py  task_3.py
lesson_10/: task_1_2_3.py
lesson_11/: emails.in  task_1.py  task_3.py
lesson_13_sql/: create_tables.sql  drop_tables.sql
lesson_14_sql/: my_connection.py  task_1.py  task_2_main.py  task_2_table_obj.py  task_2_table_objects.py
lesson_15_algorithms/: binary_searching.py  time_logger.py
lesson_16_iternet/: client.py  server.py  socket_interface.py
lesson_16_iternet/db/: connection.py
lesson_17_patterns/: client.py  interface.py  main.py
lesson_17_patterns/db/: table_objects.py
lesson_18_flask/: blog.py  db.py  facade.py  pyproject.toml
lesson_18_flask/templates/: base.html  edit.html  index.html  post.html
lesson_2/: task_1.py  task_1_2_3.py  task_2.py  task_3.py  task_4.py
lesson_23_horoscope/: add_zodiac_signs.sql  services.py
lesson_3/: task_1.py  task_2_3.py  task_4.py  task_5.py
lesson_4/: homework_task1.py  homework_task2.py  homework_task3.py  homework_task4.py  recursion_homework.py  task_1.py  task_2.py  task_3.py  task_4.py
lesson_5/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
lesson_6/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_decorator.py
lesson_8/: task_1.py  task_2.py  task_3.py
lesson_9/: task_1_2_3_4.py  test_task.py
list_dict_coprehensions/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
slices/: task_3.py
(+34 files in other folders)
