[tool.poetry]
name = "tms"
version = "0.1.0"
description = ""
authors = ["Alexandr <maximchik.alexandr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
flake8-bugbear = "^23.1.20"
flake8-builtins = "^2.1.0"
flake8-variables-names = "^0.0.5"
isort = "^5.12.0"
mypy = "^0.991"
pep8-naming = "^0.13.3"
pylint = "^2.16.1"
flake8-class-attributes-order = "^0.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-cognitive-complexity = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
